# actix-authentication-middleware

./: Cargo.toml  README.md  dev-server.json
src/: lib.rs  middleware.rs  user.rs  user_db.rs
tests/: test_authentication.rs
