[package]
name = "actix-authentication-middleware"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = ">=4.0.0"
futures = ">=0.3"
serde = { version = ">=1.0.195", features = ["derive"] }
serde_json = { version = ">=1.0.100" }
reqwest = { version = ">=0.12", features = ["json", "multipart"] }
anyhow = ">=1"
log = { version = ">=0.4" }
