[package]
name = "actix-authentication-middleware"
version = "0.1.9"
edition = "2024"

[dependencies]
actix-web = ">=4.0.0"
futures = ">=0.3"
serde = { version = ">=1.0.195", features = ["derive"] }
serde_json = { version = ">=1.0.100" }
reqwest = { version = ">=0.12", features = ["json", "multipart"] }
anyhow = ">=1"
log = { version = ">=0.4" }
database-common-lib = { git = "https://github.com/Mardens-Inc/database-common-lib.git" }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
base64 = { version = "0.22.1" }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros"] }
pretty_env_logger = { version = "0.5.0" }